[tool.poetry]
name = "exasol-schemas"
packages = [
    { include = "exasol", from = "src" },
]
version = "0.1.0"
description = ""
authors = ["Nicola Coretti <nicola.coretti@exasol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
json-schema-for-humans = "^0.46"
jinja2 = "^3.1.2"
typer = {extras = ["all"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
schema2html = 'exasol.schemas:CLI'