[project]
name = "exasol-schemas"
description = "Definitions for Exasol-provided schemas (XML, JSON, etc.)"
version = "0.1.0"
authors = [
    { name = "Nicola Coretti", email = "nicola.coretti@exasol.com"},
    { name = "Sebastian Bär", email = "sebastian.baer@exasol.com"}
]
readme = "README.md"

[tool.poetry]
packages = [
    { include = "exasol", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
json-schema-for-humans = "^0.46"
jinja2 = "^3.1.5"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
schema2html = 'exasol.schemas:CLI'