[project]
name = "exasol-schemas"
version = "1.0.0"
requires-python = ">=3.10,<4.0"
description = "Definitions for Exasol-provided schemas (XML, JSON, etc.)"
authors = [
    { name = "Nicola Coretti", email = "nicola.coretti@exasol.com"},
    { name = "Sebastian Bär", email = "sebastian.baer@exasol.com"}
]
readme = "README.md"
dynamic = ["dependencies"]

[tool.poetry]
requires-poetry = ">=2.1.0"
packages = [
    { include = "exasol", from = "src" },
]

[tool.poetry.dependencies]
json-schema-for-humans = "^0.46"
jinja2 = "^3.1.6"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
schema2html = 'exasol.schemas:CLI'